rename to CodedSMPUtils, update to 1.17, add nomobgrief, start work on back, add xsd for the config